RESOLVED FIXED268462
[GStreamer][WebRTC] Potential critical warnings due to duplicate sink pads in webrtcbin
https://bugs.webkit.org/show_bug.cgi?id=268462
Summary [GStreamer][WebRTC] Potential critical warnings due to duplicate sink pads in...
Philippe Normand
Reported 2024-01-31 07:54:37 PST
.
Attachments
Philippe Normand
Comment 1 2024-01-31 08:59:05 PST
EWS
Comment 2 2024-02-01 10:45:45 PST
Committed 273924@main (0761ec7e59e5): <https://commits.webkit.org/273924@main> Reviewed commits have been landed. Closing PR #23590 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-01 10:47:16 PST
Note You need to log in before you can comment on or make changes to this bug.