[GStreamer][WebRTC] Potential critical warnings due to duplicate sink pads in webrtcbin https://bugs.webkit.org/show_bug.cgi?id=268462

Reviewed by Xabier Rodriguez-Calvar.

The webrtcbin sink pad template no longer implies mline semantics. Those have been transfered to the
corresponding transceiver. So we can simplify our code and let webrtcbin figure out pad names on its own.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::configureAndLinkSource):
(WebCore::GStreamerMediaEndpoint::requestPad):
(WebCore::GStreamerMediaEndpoint::pickAvailablePayloadType):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.h:

Canonical link: https://commits.webkit.org/273924@main